--- a/bitrix/templates/main/1-1otdel.html
+++ b/bitrix/templates/main/1-1otdel.html
@@ -314,6 +314,50 @@
                           <div class="service-search"> 
                             <!--suggest component-->
                             <div class="search-wrapper suggest-wrapper js-suggest">
+                              <!-- с таней пришли к выводу, что этот поиск работает только по услугам которые есть, и ни в коем случае не редиректит на страницу поиска-->
+                              <!-- так что сюда плюем json следующего вида-->
+                              <script>
+                                var searchArr = {
+                                	'items': [
+                                		{
+                                			'name': 'Магнитно-резонансная ангиография интракраниальных сосудов',
+                                			'link': '#1',
+                                		},
+                                		{
+                                			'name': 'агнитно-резонансная томография всего позвоночника (всех отделов)',
+                                			'link': '#2',
+                                		},
+                                		{
+                                			'name': 'нитно-резонансная томография головного мозга',
+                                			'link': '3',
+                                		},
+                                		{
+                                			'name': 'гнитно-резонансная ангиография интракраниальных сосудов',
+                                			'link': '#4',
+                                		},
+                                		{
+                                			'name': 'итно-резонансная томография всего позвоночника (всех отделов)',
+                                			'link': '#4',
+                                		},
+                                		{
+                                			'name': 'Магнитно-резонансная томография головного мозга',
+                                			'link': '#5',
+                                		},
+                                		{
+                                			'name': 'Магнитно-резонансная томография грудного отдела позвоночника',
+                                			'link': '#5',
+                                		},
+                                		{
+                                			'name': 'Магнитно-резонансная томография мышц',
+                                			'link': '#6',
+                                		},
+                                		{
+                                			'name': 'Магнитно-резонансная томография одного голеностопного сустава',
+                                			'link': '#7',
+                                		},
+                                	]
+                                };
+                              </script>
                               <div class="suggest-wrapper-inner">
                                 <form class="search-inner search-suggest">
                                   <input class="search-input biginput" type="text" placeholder="1000 и одна услуга" required="required" autocomplete="off" aria-owns="res" aria-autocomplete="both">
@@ -433,46 +477,239 @@
                             </div>
                           </div>
                         </div>
-                        <div class="service-items">
-                          <div class="service-item">
-                            <div class="service-item-container">
-                              <div class="service-item-item">
-                                <div class="service-item-letter">A</div>
-                                <ul class="service-item-links">
-                                  <li><a class="text" href="#">Аэрозольтерапия через небулайзер (без препарата)</a></li>
-                                  <li><a class="text" href="#">Аэрозольтерапия Пульмикортом через небулайзер</a></li>
-                                  <li><a class="text" href="#">Аэрозольтерапия Вентолином через небулайзер</a></li>
-                                  <li><a class="text" href="#">Акустическая терапия почек и верхних мочевых путей</a></li>
-                                  <li><a class="text" href="#">Акустическая терапия мочевого пузыря и предстательной железы</a></li>
-                                </ul>
-                              </div>
-                              <div class="service-item-item">
-                                <div class="service-item-letter">Д</div>
-                                <ul class="service-item-links">
-                                  <li><a class="text" href="#">Аэрозольтерапия через небулайзер (без препарата)</a></li>
-                                  <li><a class="text" href="#">Аэрозольтерапия Пульмикортом через небулайзер</a></li>
-                                  <li><a class="text" href="#">Аэрозольтерапия Вентолином через небулайзер</a></li>
-                                  <li><a class="text" href="#">Акустическая терапия почек и верхних мочевых путей</a></li>
-                                  <li><a class="text" href="#">Акустическая терапия мочевого пузыря и предстательной железы</a></li>
-                                </ul>
-                              </div>
-                              <div class="service-item-item">
-                                <div class="service-item-letter">М</div>
-                                <ul class="service-item-links">
-                                  <li><a class="text" href="#">Аэрозольтерапия через небулайзер (без препарата)</a></li>
-                                  <li><a class="text" href="#">Аэрозольтерапия Пульмикортом через небулайзер</a></li>
-                                  <li><a class="text" href="#">Аэрозольтерапия Вентолином через небулайзер</a></li>
-                                  <li><a class="text" href="#">Акустическая терапия почек и верхних мочевых путей</a></li>
-                                  <li><a class="text" href="#">Акустическая терапия мочевого пузыря и предстательной железы</a></li>
-                                  <li><a class="text" href="#">Магнитно-резонансная ангиография интракраниальных сосудов</a></li>
-                                  <li><a class="text" href="#">Магнитно-резонансная томография всего позвоночника (всех отделов)</a></li>
-                                  <li><a class="text" href="#">Магнитно-резонансная томография головного мозга</a></li>
-                                </ul>
-                              </div>
-                            </div>
-                            <div class="btn light js-expand"><span>Смотреть все 118 услуг</span></div>
-                          </div>
-                        </div>
+                        <script>
+                          var elems = {
+                          	'section': [
+                          		{
+                          			'id': 1,
+                          			'name': null,
+                          			'link': '#',
+                          			'subsection' :[
+                          				{
+                          					'name': null,
+                          					'link': '#',
+                          					'letters': [
+                          						{
+                          							'letter': 'a',
+                          							'items': [
+                          								{
+                          									'name': 'Аэрозольтерапия через небулайзер (без препарата)',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Аэрозольтерапия через небулайзер (без препарата)',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Аэрозольтерапия через небулайзер (без препарата)',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Аэрозольтерапия через небулайзер (без препарата)',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Аэрозольтерапия через небулайзер (без препарата)',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Аэрозольтерапия через небулайзер (без препарата)',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Аэрозольтерапия через небулайзер (без препарата)',
+                          									'link': '#',
+                          								},
+                          							]
+                          						},
+                          						{
+                          							'letter': 'д',
+                          							'items': [
+                          								{
+                          									'name': 'Дуплексное сканирование брахиоцефальных артерий на экстракраниальном уровне',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Доплерография сосудов почек',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Доплерография сосудов щитовидной железы',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Доплерография сосудов органов малого таза',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Доплерография сосудов внутренних органов',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Доплерография сосудов матки, пуповины и плода при беременности',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Дуплексное сканирование артерий верхних конечностей',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Дуплексное сканирование вен нижних конечностей',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Дуплексное сканирование артерий нижних конечностей',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Дуплексное сканирование интракраниальных артерий',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Доплерография сосудов органов малого таза',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Доплерография сосудов внутренних органов',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Доплерография сосудов матки, пуповины и плода при беременности',
+                          									'link': '#',
+                          								},
+                          							]
+                          						},
+                          						{
+                          							'letter': 'м',
+                          							'items': [
+                          								{
+                          									'name': 'Магнитно-резонансная ангиография интракраниальных сосудов',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Магнитно-резонансная томография всего позвоночника (всех отделов)',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Магнитно-резонансная томография головного мозга',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Магнитно-резонансная ангиография интракраниальных сосудов',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Магнитно-резонансная томография всего позвоночника (всех отделов)',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Магнитно-резонансная томография головного мозга',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Магнитно-резонансная томография грудного отдела позвоночника',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Магнитно-резонансная томография мышц',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Магнитно-резонансная томография одного голеностопного сустава',
+                          									'link': '#',
+                          								},
+                          							]
+                          						},
+                          						{
+                          							'letter': 'р',
+                          							'items': [
+                          								{
+                          									'name': 'Магнитно-резонансная ангиография интракраниальных сосудов',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Магнитно-резонансная томография всего позвоночника (всех отделов)',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Магнитно-резонансная томография головного мозга',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Магнитно-резонансная ангиография интракраниальных сосудов',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Магнитно-резонансная томография всего позвоночника (всех отделов)',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Магнитно-резонансная томография головного мозга',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Магнитно-резонансная томография грудного отдела позвоночника',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Магнитно-резонансная томография мышц',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Магнитно-резонансная томография одного голеностопного сустава',
+                          									'link': '#',
+                          								},
+                          							]
+                          						},
+                          						{
+                          							'letter': 'з',
+                          							'items': [
+                          								{
+                          									'name': 'Магнитно-резонансная ангиография интракраниальных сосудов',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Магнитно-резонансная томография всего позвоночника (всех отделов)',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Магнитно-резонансная томография головного мозга',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Магнитно-резонансная ангиография интракраниальных сосудов',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Магнитно-резонансная томография всего позвоночника (всех отделов)',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Магнитно-резонансная томография головного мозга',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Магнитно-резонансная томография грудного отдела позвоночника',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Магнитно-резонансная томография мышц',
+                          									'link': '#',
+                          								},
+                          								{
+                          									'name': 'Магнитно-резонансная томография одного голеностопного сустава',
+                          									'link': '#',
+                          								},
+                          							]
+                          						},
+                          					]
+                          				}
+                          			]	
+                          		},
+                          	],
+                          };
+                        </script>
+                        <div class="service-items"></div>
                       </div>
                     </div>
                   </div>
