--- a/bitrix/templates/main/3-0vrach.html
+++ b/bitrix/templates/main/3-0vrach.html
@@ -320,6 +320,50 @@
                         <div class="docsearch-col">
                           <!--suggest component-->
                           <div class="search-wrapper suggest-wrapper js-suggest">
+                            <!-- с таней пришли к выводу, что этот поиск работает только по услугам которые есть, и ни в коем случае не редиректит на страницу поиска-->
+                            <!-- так что сюда плюем json следующего вида-->
+                            <script>
+                              var searchArr = {
+                              	'items': [
+                              		{
+                              			'name': 'Магнитно-резонансная ангиография интракраниальных сосудов',
+                              			'link': '#1',
+                              		},
+                              		{
+                              			'name': 'агнитно-резонансная томография всего позвоночника (всех отделов)',
+                              			'link': '#2',
+                              		},
+                              		{
+                              			'name': 'нитно-резонансная томография головного мозга',
+                              			'link': '3',
+                              		},
+                              		{
+                              			'name': 'гнитно-резонансная ангиография интракраниальных сосудов',
+                              			'link': '#4',
+                              		},
+                              		{
+                              			'name': 'итно-резонансная томография всего позвоночника (всех отделов)',
+                              			'link': '#4',
+                              		},
+                              		{
+                              			'name': 'Магнитно-резонансная томография головного мозга',
+                              			'link': '#5',
+                              		},
+                              		{
+                              			'name': 'Магнитно-резонансная томография грудного отдела позвоночника',
+                              			'link': '#5',
+                              		},
+                              		{
+                              			'name': 'Магнитно-резонансная томография мышц',
+                              			'link': '#6',
+                              		},
+                              		{
+                              			'name': 'Магнитно-резонансная томография одного голеностопного сустава',
+                              			'link': '#7',
+                              		},
+                              	]
+                              };
+                            </script>
                             <div class="suggest-wrapper-inner">
                               <form class="search-inner search-suggest">
                                 <input class="search-input biginput" type="text" placeholder="1000 и одна услуга" required="required" autocomplete="off" aria-owns="res" aria-autocomplete="both">
