--- a/bitrix/templates/main/css/screen.css
+++ b/bitrix/templates/main/css/screen.css
@@ -2041,16 +2041,20 @@ body, .out {
   font-size: 0.875rem;
   color: #fff;
   color: var(--color-white);
-  -webkit-transition: opacity .25s, -webkit-transform .25s;
-  transition: opacity .25s, -webkit-transform .25s;
-  transition: transform .25s, opacity .25s;
-  transition: transform .25s, opacity .25s, -webkit-transform .25s;
+  display: block;
+  -webkit-transition: opacity .25s,color .3s, -webkit-transform .25s;
+  transition: opacity .25s,color .3s, -webkit-transform .25s;
+  transition: transform .25s, opacity .25s,color .3s;
+  transition: transform .25s, opacity .25s,color .3s, -webkit-transform .25s;
   -webkit-transform: translateX(-10px);
   -ms-transform: translateX(-10px);
   transform: translateX(-10px);
   opacity: 0; }
   .vrach-inner-add-item:nth-child(6 + n) {
     display: none; }
+  .vrach-inner-add-item:hover {
+    color: #323232 !important;
+    color: var(--color-textblk) !important; }
 
 .dots-wrap .slick-dots {
   text-align: center; }
@@ -2088,17 +2092,18 @@ body, .out {
     font-size: 1rem;
     max-height: 400px;
     overflow-y: auto; }
-    .suggest-list-inner div {
+    .suggest-list-inner a {
       font-size: 0.875rem;
       color: #8b8b8b;
       color: var(--color-textgray);
       -webkit-transition: color 0.3s;
       transition: color 0.3s;
+      display: block;
       line-height: 1.3;
       padding-top: 0.5rem;
       padding-bottom: 0.5rem;
       cursor: pointer; }
-      .suggest-list-inner div:hover {
+      .suggest-list-inner a:hover {
         color: #323232;
         color: var(--color-textblk); }
     .suggest-list-inner .highligt {
@@ -2997,7 +3002,8 @@ body, .out {
     width: 4.375rem;
     font-size: 1.125rem;
     font-weight: 700;
-    padding-left: 0.9375rem; }
+    padding-left: 0.9375rem;
+    text-transform: uppercase; }
   .service-item-links {
     font-size: 0;
     margin-top: -0.8125rem;
@@ -4965,24 +4971,24 @@ a.text:active {
     transform: none; }
 
   .vrach-inner:hover .vrach-inner-add-item:nth-child(1) {
-    -webkit-transition-delay: .55s;
-    transition-delay: .55s; }
+    -webkit-transition-delay: .55s, .55s, 0s;
+    transition-delay: .55s, .55s, 0s; }
 
   .vrach-inner:hover .vrach-inner-add-item:nth-child(2) {
-    -webkit-transition-delay: .45s;
-    transition-delay: .45s; }
+    -webkit-transition-delay: .45s, .45s, 0s;
+    transition-delay: .45s, .45s, 0s; }
 
   .vrach-inner:hover .vrach-inner-add-item:nth-child(3) {
-    -webkit-transition-delay: .35s;
-    transition-delay: .35s; }
+    -webkit-transition-delay: .35s, .35s, 0s;
+    transition-delay: .35s, .35s, 0s; }
 
   .vrach-inner:hover .vrach-inner-add-item:nth-child(4) {
-    -webkit-transition-delay: .25s;
-    transition-delay: .25s; }
+    -webkit-transition-delay: .25s, .25s, 0s;
+    transition-delay: .25s, .25s, 0s; }
 
   .vrach-inner:hover .vrach-inner-add-item:nth-child(5) {
-    -webkit-transition-delay: .15s;
-    transition-delay: .15s; }
+    -webkit-transition-delay: .15s, .15s, 0s;
+    transition-delay: .15s, .15s, 0s; }
 
   .news-item-inner:hover .news-item-content-inner:before {
     opacity: 1; }
