--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -1680,15 +1680,15 @@ body, .out
 					opacity: 1
 					transform: none
 					&:nth-child(1)
-						transition-delay: .55s
+						transition-delay: .55s, .55s, 0s
 					&:nth-child(2)
-						transition-delay: .45s
+						transition-delay: .45s, .45s, 0s
 					&:nth-child(3)
-						transition-delay: .35s
+						transition-delay: .35s, .35s, 0s
 					&:nth-child(4)
-						transition-delay: .25s
+						transition-delay: .25s, .25s, 0s
 					&:nth-child(5)
-						transition-delay: .15s
+						transition-delay: .15s, .15s, 0s
 
 	&-vrach
 		position: absolute
@@ -1770,15 +1770,22 @@ body, .out
 				+rem(margin-top,7px)
 				font-weight: 600
 		&-add
+			// &:hover
+			// 	*
+			// 		transition: 0s !important
 			&-item
 				+rem(padding-top,18px)
 				+rem(font-size,14px)
 				color: color(white)
-				transition: transform .25s, opacity .25s
+				display: block
+				transition: transform .25s, opacity .25s,color .3s
 				transform: translateX(-10px)
 				opacity: 0
 				&:nth-child(6+n)
 					display: none
+				&:hover
+					
+					color: color(textblk) !important
 					
 
 .dots-wrap
@@ -1822,10 +1829,11 @@ body, .out
 			overflow-y: auto
 
 
-			div 
+			a 
 				+rem(font-size,14px)
 				color: color(textgray)
 				+tr(color .3s)
+				display: block
 				line-height: 1.3
 				+rem(padding-top,8px)
 				+rem(padding-bottom,8px)
@@ -2735,6 +2743,7 @@ body, .out
 			+rem(font-size,18px)
 			font-weight: 700
 			+rem(padding-left,15px)
+			text-transform: uppercase
 			+r(600)
 				+rem(width,50px)
 		&-links
